ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_Manufacturer__c/Beneficiary_Manufacturer__c.object-meta.xml
<CustomObject>
    <label>Beneficiary Manufacturer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beneficiary Manufacturers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>