ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_Manufacturer__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Beneficiary Manufacturers</relationshipLabel>
    <relationshipName>Beneficiary_Manufacturers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>