ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_Manufacturer__c/fields/Manufacturer_Ben_Code__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Ben_Code__c</fullName>
    <label>Manufacturer Ben Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>