ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_Manufacturer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Beneficiary_Master__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Unique_Identifier__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OBJECT_ID</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Beneficiary_Master__c</field>
        <operation>equals</operation>
        <value>VICKY CAR BAZAAR</value>
    </filters>
    <label>All</label>
</ListView>