ProdIND/ProdPrograms/force-app/main/default/objects/Beneficiary_Manufacturer__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Beneficiary_Master__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Unique_Identifier__c</field>
        <operation>contains</operation>
        <value>BEN004666</value>
    </filters>
    <label>All</label>
</ListView>